# guerilla-games

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/core/: CMakeLists.txt  board.cpp  board.h  board_traverser.h  boggle_string.cpp  boggle_string.h  config.h  coordinate.cpp  coordinate.h  dictionary.cpp  dictionary.h  pch.h  profile_span.h  solver.cpp  solver.h  visitation_guard.h  vistiation_guard.cpp
source/test/: BoggleTest.cpp  CMakeLists.txt
